--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "semantic-ui-react": "^2.1.4",
+    "sweetalert2": "^11.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
