--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "semantic-ui-react": "^2.1.4",
+    "serve": "^14.2.0",
     "sweetalert2": "^11.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+     "start": "serve -s build",
+     "dev": "react-scripts start",
+     "build": "react-scripts build",
+     "test": "react-scripts test",
+     "eject": "react-scripts eject"
+   },
   "eslintConfig": {
     "extends": [
       "react-app",
